# E_commerce_FastApi

./: Dockerfile  README.md  pyproject.toml  test.ipynb  test_token.py
.github/workflows/: main.yml
ecommerce/: fill_database_products.py  fill_database_users.py  main.py  models.py  piccolo_app.py  piccolo_conf.py  settings.py  tables.py
ecommerce/dto/: dto_cart.py  dto_order.py  dto_product.py  dto_sale.py  dto_smtp.py  dto_user.py
ecommerce/models/: cart_models.py  dashboard_saler_models.py  order_models.py  product_models.py  promotionalcode_models.py  purchase_models.py  review_models.py  sale_models.py  user_models.py
ecommerce/piccolo_migrations/: ecommerce_fast_api_2024_04_15t17_59_03_439897.py  ecommerce_fast_api_2024_04_15t18_00_46_114687.py  ecommerce_fast_api_2024_04_19t11_41_47_895261.py  ecommerce_fast_api_2024_04_19t11_52_30_430082.py  ecommerce_fast_api_2024_04_19t13_38_22_968490.py  ecommerce_fast_api_2024_04_19t14_12_11_717168.py  ecommerce_fast_api_2024_04_19t14_14_55_741662.py  ecommerce_fast_api_2024_04_19t15_16_49_258056.py  ecommerce_fast_api_2024_04_19t15_33_40_984645.py  ecommerce_fast_api_2024_04_19t15_34_56_771756.py  ecommerce_fast_api_2024_04_19t15_38_15_141092.py  ecommerce_fast_api_2024_04_19t16_41_49_881382.py  ecommerce_fast_api_2024_04_19t17_18_01_935980.py  ecommerce_fast_api_2024_04_19t17_26_19_736977.py  ecommerce_fast_api_2024_04_19t17_30_32_860733.py  ecommerce_fast_api_2024_04_23t16_09_47_171088.py  ecommerce_fast_api_2024_04_23t18_51_27_384098.py  ecommerce_fast_api_2024_04_25t11_38_51_216890.py  (+14 more)
ecommerce/routes/: auth.py  (+9 more)
(+36 files in other folders)
